Second go around
This is updated with two lines of css and the css link sheet

--- a/Github me page/index.html
+++ b/Github me page/index.html
@@ -13,6 +13,7 @@
     <div>
         <h2>About me</h2>
         <img src="Resources\Me headshot Glacier.PNG" alt="Image not supported">
+        <p>I am an aspriring developer. I am focusing on front end at the moment and wnat to use github to try my skills out as I go and show the world what I can do.</p>
     </div>
     
 </body>
